--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "electronapp",
+  "name": "electroninstagram",
   "version": "1.0.0",
-  "description": "Electron App",
+  "description": "Instagram Desktop Electron-based",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager . ElectronApp --platform=win32 --arch=x64 --icon=favicon.ico --out=dist --overwrite",
-    "build": "electron-builder",
+    "package": "electron-packager . ElectronInstagram --platform linux --arch x64 --icon favicon.ico --out dist/ --overwrite",
+    "build": "electron-packager . app --platform linux --arch x64 --out dist/ --overwrite",
+    "dist": "electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiago Coutinho",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^36.2.0",
+    "electron": "^23.3.13",
     "electron-builder": "^26.0.12",
     "electron-packager": "^17.1.2"
+  },
+  "dependencies": {
+    "keytar": "^7.9.0"
+  },
+  "build": {
+    "appId": "com.thilsc.electroninstagram",
+    "productName": "ElectronInstagram",
+    "linux": {
+      "target": ["AppImage", "deb"],
+      "icon": "favicon.ico"
+    }
   }
 }
