Add Linux build artifacts to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,237 @@ dist/win-unpacked/vulkan-1.dll
 dist/electronapp Setup 1.0.0.exe
 dist/electronapp Setup 1.0.0.exe.blockmap
 node_modules
+dist/app-linux-x64/app
+dist/app-linux-x64/chrome_100_percent.pak
+dist/app-linux-x64/chrome_200_percent.pak
+dist/app-linux-x64/chrome_crashpad_handler
+dist/app-linux-x64/chrome-sandbox
+dist/app-linux-x64/icudtl.dat
+dist/app-linux-x64/libEGL.so
+dist/app-linux-x64/libffmpeg.so
+dist/app-linux-x64/libGLESv2.so
+dist/app-linux-x64/libvk_swiftshader.so
+dist/app-linux-x64/libvulkan.so.1
+dist/app-linux-x64/LICENSE
+dist/app-linux-x64/LICENSES.chromium.html
+dist/app-linux-x64/resources.pak
+dist/app-linux-x64/snapshot_blob.bin
+dist/app-linux-x64/v8_context_snapshot.bin
+dist/app-linux-x64/version
+dist/app-linux-x64/vk_swiftshader_icd.json
+dist/app-linux-x64/locales/af.pak
+dist/app-linux-x64/locales/am.pak
+dist/app-linux-x64/locales/ar.pak
+dist/app-linux-x64/locales/bg.pak
+dist/app-linux-x64/locales/bn.pak
+dist/app-linux-x64/locales/ca.pak
+dist/app-linux-x64/locales/cs.pak
+dist/app-linux-x64/locales/da.pak
+dist/app-linux-x64/locales/de.pak
+dist/app-linux-x64/locales/el.pak
+dist/app-linux-x64/locales/en-GB.pak
+dist/app-linux-x64/locales/en-US.pak
+dist/app-linux-x64/locales/es-419.pak
+dist/app-linux-x64/locales/es.pak
+dist/app-linux-x64/locales/et.pak
+dist/app-linux-x64/locales/fa.pak
+dist/app-linux-x64/locales/fi.pak
+dist/app-linux-x64/locales/fil.pak
+dist/app-linux-x64/locales/fr.pak
+dist/app-linux-x64/locales/gu.pak
+dist/app-linux-x64/locales/he.pak
+dist/app-linux-x64/locales/hi.pak
+dist/app-linux-x64/locales/hr.pak
+dist/app-linux-x64/locales/hu.pak
+dist/app-linux-x64/locales/id.pak
+dist/app-linux-x64/locales/it.pak
+dist/app-linux-x64/locales/ja.pak
+dist/app-linux-x64/locales/kn.pak
+dist/app-linux-x64/locales/ko.pak
+dist/app-linux-x64/locales/lt.pak
+dist/app-linux-x64/locales/lv.pak
+dist/app-linux-x64/locales/ml.pak
+dist/app-linux-x64/locales/mr.pak
+dist/app-linux-x64/locales/ms.pak
+dist/app-linux-x64/locales/nb.pak
+dist/app-linux-x64/locales/nl.pak
+dist/app-linux-x64/locales/pl.pak
+dist/app-linux-x64/locales/pt-BR.pak
+dist/app-linux-x64/locales/pt-PT.pak
+dist/app-linux-x64/locales/ro.pak
+dist/app-linux-x64/locales/ru.pak
+dist/app-linux-x64/locales/sk.pak
+dist/app-linux-x64/locales/sl.pak
+dist/app-linux-x64/locales/sr.pak
+dist/app-linux-x64/locales/sv.pak
+dist/app-linux-x64/locales/sw.pak
+dist/app-linux-x64/locales/ta.pak
+dist/app-linux-x64/locales/te.pak
+dist/app-linux-x64/locales/th.pak
+dist/app-linux-x64/locales/tr.pak
+dist/app-linux-x64/locales/uk.pak
+dist/app-linux-x64/locales/ur.pak
+dist/app-linux-x64/locales/vi.pak
+dist/app-linux-x64/locales/zh-CN.pak
+dist/app-linux-x64/locales/zh-TW.pak
+dist/app-linux-x64/resources/app/.gitignore
+dist/app-linux-x64/resources/app/favicon.ico
+dist/app-linux-x64/resources/app/index.html
+dist/app-linux-x64/resources/app/main.js
+dist/app-linux-x64/resources/app/package.json
+dist/app-linux-x64/resources/app/README.md
+dist/ElectronInstagram-linux-x64/chrome_100_percent.pak
+dist/ElectronInstagram-linux-x64/chrome_200_percent.pak
+dist/ElectronInstagram-linux-x64/chrome_crashpad_handler
+dist/ElectronInstagram-linux-x64/chrome-sandbox
+dist/ElectronInstagram-linux-x64/ElectronInstagram
+dist/ElectronInstagram-linux-x64/icudtl.dat
+dist/ElectronInstagram-linux-x64/libEGL.so
+dist/ElectronInstagram-linux-x64/libffmpeg.so
+dist/ElectronInstagram-linux-x64/libGLESv2.so
+dist/ElectronInstagram-linux-x64/libvk_swiftshader.so
+dist/ElectronInstagram-linux-x64/libvulkan.so.1
+dist/ElectronInstagram-linux-x64/LICENSE
+dist/ElectronInstagram-linux-x64/LICENSES.chromium.html
+dist/ElectronInstagram-linux-x64/resources.pak
+dist/ElectronInstagram-linux-x64/snapshot_blob.bin
+dist/ElectronInstagram-linux-x64/v8_context_snapshot.bin
+dist/ElectronInstagram-linux-x64/version
+dist/ElectronInstagram-linux-x64/vk_swiftshader_icd.json
+dist/ElectronInstagram-linux-x64/locales/af.pak
+dist/ElectronInstagram-linux-x64/locales/am.pak
+dist/ElectronInstagram-linux-x64/locales/ar.pak
+dist/ElectronInstagram-linux-x64/locales/bg.pak
+dist/ElectronInstagram-linux-x64/locales/bn.pak
+dist/ElectronInstagram-linux-x64/locales/ca.pak
+dist/ElectronInstagram-linux-x64/locales/cs.pak
+dist/ElectronInstagram-linux-x64/locales/da.pak
+dist/ElectronInstagram-linux-x64/locales/de.pak
+dist/ElectronInstagram-linux-x64/locales/el.pak
+dist/ElectronInstagram-linux-x64/locales/en-GB.pak
+dist/ElectronInstagram-linux-x64/locales/en-US.pak
+dist/ElectronInstagram-linux-x64/locales/es-419.pak
+dist/ElectronInstagram-linux-x64/locales/es.pak
+dist/ElectronInstagram-linux-x64/locales/et.pak
+dist/ElectronInstagram-linux-x64/locales/fa.pak
+dist/ElectronInstagram-linux-x64/locales/fi.pak
+dist/ElectronInstagram-linux-x64/locales/fil.pak
+dist/ElectronInstagram-linux-x64/locales/fr.pak
+dist/ElectronInstagram-linux-x64/locales/gu.pak
+dist/ElectronInstagram-linux-x64/locales/he.pak
+dist/ElectronInstagram-linux-x64/locales/hi.pak
+dist/ElectronInstagram-linux-x64/locales/hr.pak
+dist/ElectronInstagram-linux-x64/locales/hu.pak
+dist/ElectronInstagram-linux-x64/locales/id.pak
+dist/ElectronInstagram-linux-x64/locales/it.pak
+dist/ElectronInstagram-linux-x64/locales/ja.pak
+dist/ElectronInstagram-linux-x64/locales/kn.pak
+dist/ElectronInstagram-linux-x64/locales/ko.pak
+dist/ElectronInstagram-linux-x64/locales/lt.pak
+dist/ElectronInstagram-linux-x64/locales/lv.pak
+dist/ElectronInstagram-linux-x64/locales/ml.pak
+dist/ElectronInstagram-linux-x64/locales/mr.pak
+dist/ElectronInstagram-linux-x64/locales/ms.pak
+dist/ElectronInstagram-linux-x64/locales/nb.pak
+dist/ElectronInstagram-linux-x64/locales/nl.pak
+dist/ElectronInstagram-linux-x64/locales/pl.pak
+dist/ElectronInstagram-linux-x64/locales/pt-BR.pak
+dist/ElectronInstagram-linux-x64/locales/pt-PT.pak
+dist/ElectronInstagram-linux-x64/locales/ro.pak
+dist/ElectronInstagram-linux-x64/locales/ru.pak
+dist/ElectronInstagram-linux-x64/locales/sk.pak
+dist/ElectronInstagram-linux-x64/locales/sl.pak
+dist/ElectronInstagram-linux-x64/locales/sr.pak
+dist/ElectronInstagram-linux-x64/locales/sv.pak
+dist/ElectronInstagram-linux-x64/locales/sw.pak
+dist/ElectronInstagram-linux-x64/locales/ta.pak
+dist/ElectronInstagram-linux-x64/locales/te.pak
+dist/ElectronInstagram-linux-x64/locales/th.pak
+dist/ElectronInstagram-linux-x64/locales/tr.pak
+dist/ElectronInstagram-linux-x64/locales/uk.pak
+dist/ElectronInstagram-linux-x64/locales/ur.pak
+dist/ElectronInstagram-linux-x64/locales/vi.pak
+dist/ElectronInstagram-linux-x64/locales/zh-CN.pak
+dist/ElectronInstagram-linux-x64/locales/zh-TW.pak
+dist/ElectronInstagram-linux-x64/resources/app/.gitignore
+dist/ElectronInstagram-linux-x64/resources/app/favicon.ico
+dist/ElectronInstagram-linux-x64/resources/app/index.html
+dist/ElectronInstagram-linux-x64/resources/app/main.js
+dist/ElectronInstagram-linux-x64/resources/app/package.json
+dist/ElectronInstagram-linux-x64/resources/app/README.md
+dist/ElectronInstagram-linux-x64/resources/app/.github/workflows/node.js.yml
+dist/ElectronInstagram-linux-x64/resources/app/.vscode/launch.json
+dist/linux-unpacked/locales/af.pak
+dist/linux-unpacked/locales/am.pak
+dist/linux-unpacked/locales/ar.pak
+dist/linux-unpacked/locales/bg.pak
+dist/linux-unpacked/locales/bn.pak
+dist/linux-unpacked/locales/ca.pak
+dist/linux-unpacked/locales/cs.pak
+dist/linux-unpacked/locales/da.pak
+dist/linux-unpacked/locales/de.pak
+dist/linux-unpacked/locales/el.pak
+dist/linux-unpacked/locales/en-GB.pak
+dist/linux-unpacked/locales/en-US.pak
+dist/linux-unpacked/locales/es-419.pak
+dist/linux-unpacked/locales/es.pak
+dist/linux-unpacked/locales/et.pak
+dist/linux-unpacked/locales/fa.pak
+dist/linux-unpacked/locales/fi.pak
+dist/linux-unpacked/locales/fil.pak
+dist/linux-unpacked/locales/fr.pak
+dist/linux-unpacked/locales/gu.pak
+dist/linux-unpacked/locales/he.pak
+dist/linux-unpacked/locales/hi.pak
+dist/linux-unpacked/locales/hr.pak
+dist/linux-unpacked/locales/hu.pak
+dist/linux-unpacked/locales/id.pak
+dist/linux-unpacked/locales/it.pak
+dist/linux-unpacked/locales/ja.pak
+dist/linux-unpacked/locales/kn.pak
+dist/linux-unpacked/locales/ko.pak
+dist/linux-unpacked/locales/lt.pak
+dist/linux-unpacked/locales/lv.pak
+dist/linux-unpacked/locales/ml.pak
+dist/linux-unpacked/locales/mr.pak
+dist/linux-unpacked/locales/ms.pak
+dist/linux-unpacked/locales/nb.pak
+dist/linux-unpacked/locales/nl.pak
+dist/linux-unpacked/locales/pl.pak
+dist/linux-unpacked/locales/pt-BR.pak
+dist/linux-unpacked/locales/pt-PT.pak
+dist/linux-unpacked/locales/ro.pak
+dist/linux-unpacked/locales/ru.pak
+dist/linux-unpacked/locales/sk.pak
+dist/linux-unpacked/locales/sl.pak
+dist/linux-unpacked/locales/sr.pak
+dist/linux-unpacked/locales/sv.pak
+dist/linux-unpacked/locales/sw.pak
+dist/linux-unpacked/locales/ta.pak
+dist/linux-unpacked/locales/te.pak
+dist/linux-unpacked/locales/th.pak
+dist/linux-unpacked/locales/tr.pak
+dist/linux-unpacked/locales/uk.pak
+dist/linux-unpacked/locales/ur.pak
+dist/linux-unpacked/locales/vi.pak
+dist/linux-unpacked/locales/zh-CN.pak
+dist/linux-unpacked/locales/zh-TW.pak
+dist/linux-unpacked/chrome_100_percent.pak
+dist/linux-unpacked/chrome_200_percent.pak
+dist/linux-unpacked/chrome_crashpad_handler
+dist/linux-unpacked/chrome-sandbox
+dist/linux-unpacked/electroninstagram
+dist/linux-unpacked/icudtl.dat
+dist/linux-unpacked/libEGL.so
+dist/linux-unpacked/libffmpeg.so
+dist/linux-unpacked/libGLESv2.so
+dist/linux-unpacked/libvk_swiftshader.so
+dist/linux-unpacked/libvulkan.so.1
+dist/linux-unpacked/LICENSE.electron.txt
+dist/linux-unpacked/LICENSES.chromium.html
+dist/linux-unpacked/resources.pak
+dist/linux-unpacked/snapshot_blob.bin
+dist/linux-unpacked/v8_context_snapshot.bin
+dist/linux-unpacked/vk_swiftshader_icd.json
+dist/linux-unpacked/resources/app-update.yml
+dist/linux-unpacked/resources/app.asar
